--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <main>
+  <main>
+    <div class="container">
       <div class="sub-container">
         <section class="info">
           <h1>10,000+ of our users love our products.</h1>
@@ -62,7 +62,7 @@
         </section>
       </div>
       <section class="cards-comment-section">
-        <div class="card-comment-container">
+        <div class="card-comment-container one">
             <div class="card-comment">
               <header>
                 <img src="images/image-colton.jpg" alt="Colton">
@@ -78,7 +78,7 @@
               </blockquote>
             </div>
         </div>
-        <div class="card-comment-container">
+        <div class="card-comment-container two">
           <div class="card-comment">
             <header>
               <img src="images/image-irene.jpg" alt="Irene">
@@ -93,7 +93,7 @@
             </blockquote>
           </div>
         </div>
-        <div class="card-comment-container">
+        <div class="card-comment-container three">
           <div class="card-comment">
             <header>
               <img src="images/image-anne.jpg" alt="Anne">
@@ -109,8 +109,8 @@
           </div>
         </div>
       </section>
-    </main>
-  </div>
+    </div>
+  </main>
 </body>
 
 </html>
