--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
               </blockquote>
             </div>
         </div>
-        <div class="card-comment-container two">
-          <div class="card-comment">
+        <div class="card-comment-container">
+          <div class="card-comment" id="card-comment-two">
             <header>
               <img src="images/image-irene.jpg" alt="Irene">
               <div class="title-card">
@@ -93,8 +93,8 @@
             </blockquote>
           </div>
         </div>
-        <div class="card-comment-container three">
-          <div class="card-comment">
+        <div class="card-comment-container three" >
+          <div class="card-comment" id="card-comment-three">
             <header>
               <img src="images/image-anne.jpg" alt="Anne">
               <div class="title-card">
